@@ -1,1 +1,2 @@
 from ftw.testing.testcase import MockTestCase
+from ftw.testing.layer import ComponentRegistryLayer
